2003-01-04  Hans Breuer  <hans@breuer.org>

	* app/dia-app-icons.h : TODO : to be removed when autogenerated on *NIX, too.
	* app/interface.c : use dia-app-icons.h to give Dia window icons

	* lib/dia_image.c lib/color.c : _never_ call functions implemented
	in app/ from lib/. It is not portable and broken from design
	* app/app_procs.c : call color_init() and dia_image_init() conditional,
	i.e. only if running interactive.

	* lib/font.h : #include <time.h>

	* lib/libdia.def : updated externals

	* objects/UML/actor.c 
            objects/UML/association.c (todo)
	  objects/UML/branch.c
	  objects/UML/class.[hc] objects/UML/class_dialog.c
	  objects/UML/classicon.c
	  objects/UML/component.c 
	  objects/UML/constraint.c
	  objects/UML/dependency.c
	  objects/UML/generalization.c
	  objects/UML/implements.c
	  objects/UML/large_package.c
	  objects/UML/lifeline.c
	  objects/UML/message.c
	  objects/UML/node.c
	  objects/UML/object.c
	  objects/UML/realizes.c
	  objects/UML/small_package.c
	  objects/UML/state.c
	  objects/UML/usecase.c
	  objects/UML/
	: ported coloring of most UML objects (bug #97517, orginal
	  work Mathias Hasselmann)

	* lib/properties.h : add _OPTIONAL variants for 
	PROP_STD_(LINE|FILL|TEXT)_COLOUR which allows to load old -
	i.e. default colored - UML diagrams without complaining
	* lib/proplist.c lib/propoffsets.c : avoid setting _OPTIONAL,
	not set properties with the help of PXP_NOTSET. Otherwise 
	optional attributes would lead to wrong initialization.	

	* lib/widgets.[hc] : moved _DiaFontSelector from .h to .c
	to hide details and restict #undef GTK_DISABLE_DEPRECATED to .c
	Same for most other selectors which probably should be rewritten
	to the combo box with tree model from Gtk+ 2.4

2004-01-04  Lars Clausen  <lrclause@cs.uiuc.edu>

	* INSTALL (PLATFORM NOTES): Mention the Gnu gettext and iconv as
	being the Right Thing(tm) to use on Solaris.

	* objects/standard/bezier.c (bezierline_draw): Don't draw
	guidelines if not selected.
