@@ -1,5 +1,17 @@
 2003-01-04  Hans Breuer  <hans@breuer.org>
 
+	* lib/diagdkrenderer.c : replace rendering of really small (height
+	less than 2 pixels) with a simple dashed line, you wont notice the 
+	differnce beside it being much faster. This allows ...
+	* lib/diagdkrenderer.h : ... to remove gboolean rendertext ...
+	* app/navigation.c : ... and lets you see an read rendered text even 
+	in the nice navigation popup.
+
+	* lib/dialibartrenderer.c : FONT_SCALE defined as 1.0 for G_OS_WIN32, too. 
+	(draw_string) : don't leak temporary image
+
+2003-01-04  Hans Breuer  <hans@breuer.org>
+
 	* app/dia-app-icons.h : TODO : to be removed when autogenerated on *NIX, too.
 	* app/interface.c : use dia-app-icons.h to give Dia window icons
 
